# bash-dance

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  setup  tooling-requirements.txt
bash_crash/: __main__.py  bashpack.py  lexer.py  resolver.py  script.py
src/bash_dance/: __main__.py  formatter.py  lexer.py  resolver.py  script.py
tests/bash_crash/: test_lexer.py
tests/bash_crash/test_docs/: test_docs_1.bash  test_docs_2.bash  test_lib_b.bash  test_lib_c.bash
tests/bash_dance/: test_formatter.py  test_lexer.py  test_resolver.py
tests/bash_dance/test_docs/: test_docs_1.bash  test_docs_2.bash
tests/bash_dance/test_docs/lib/: test_lib_a.bash
