[tool.poetry]
name = "bash-dance"
version = "0.1.0"
description = "A tool for bash script preprocessing."
authors = ["Yvan Vivid <yvan.vivid@gmail.com>"]
readme = "README.md"

packages = [ { include = "bash_dance", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "*"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
neovim = "^0.3.1"

[tool.poetry.scripts]
bash-dance = 'bash_dance.__main__:run'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
